--- a/.github/workflows/issues.yaml
+++ b/.github/workflows/issues.yaml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: joshcarp/gh-issue-automation@latest
+      - uses: joshcarp/gh-issue-automation@v0.0.1
         with:
           gh_token: ${GITHUB_TOKEN}
           gh_owner: "joshcarp"
