--- a/.github/workflows/issues.yaml
+++ b/.github/workflows/issues.yaml
@@ -9,4 +9,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: joshcarp/predicate@v0.0.7
+      - uses: joshcarp/predicate@f8b45da
